infra/k8s/base/twilight/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: twilight
  labels:
    app.kubernetes.io/name: twilight
spec:
  selector:
    app.kubernetes.io/name: twilight
  ports:
    - name: http
      port: 8080
      targetPort: http
---
apiVersion: v1
kind: Service
metadata:
  name: twilight-pods
  labels:
    app.kubernetes.io/name: twilight
spec:
  clusterIP: None
  selector:
    app.kubernetes.io/name: twilight
  ports:
    - name: health
      port: 9102
      targetPort: health
