infra/k8s/base/twilight/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: twilight
  labels:
    app.kubernetes.io/name: twilight
spec:
  rules:
    - host: twilight.dusk.test
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: twilight
                port:
                  name: http
